[package]
name = "deadlines"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.21"
crossterm = "0.24.0"
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.17"
oauth2 = { version = "4.2.3", features = ["reqwest"] }
reqwest = "0.11.11"
serde = { version = "1.0.141", features = ["derive"] }
serde_json = "1.0.82"
structopt = "0.3.26"
thiserror = "1.0.31"
tui = { version = "0.18.0", features = ["serde", "crossterm"] }
url = { version = "2.2.2", features = ["serde"] }
